edit and delete

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -34,7 +34,7 @@
 			{% else %}
 			<li class='pull-right'><a href="{% url 'logout' %}">Logout</a></li>
 			<li class='pull-right'><a href="{% url 'events:create' %}">Add new event</a></li>
-			<li class='pull-right'><a href="{% url 'events:feed' %}">My events</a></li>
+			<li class='pull-right'><a href="{% url 'my-events' %}">My events</a></li>
 			{% endif %}
 		</ol>
 
@@ -50,6 +50,8 @@
 
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
 
 </html>
