--- a/src/templates/event_feed.html
+++ b/src/templates/event_feed.html
@@ -15,7 +15,7 @@
 	<div class='row'>
 		<div class="col-sm-12">
 			<div class='thumbnail'>
-				{% if obj.image %}<img src="{{ obj.image.url }}" class='img-responsive'>{% endif %}
+				{% if obj.poster %}<img src="{{ obj.poster.url }}" class='img-responsive'>{% endif %}
 				<div class='caption'>
 					<h3><a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a></h3>
 					<p>{{ obj.user }}</p>
